<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileInfoFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingHorizontal="20dp">

    <!-- User's name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="14sp"
        android:layout_marginTop="5dp"/>

        <!-- User's email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>

        <!-- User's phone number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone_num"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/user_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/entrant_teal" />

        <Button
            android:id="@+id/btn_delete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/delete_profile"
            android:textColor="@color/admin_black"
            app:backgroundTint="#E6E6E6"
            app:strokeColor="@color/admin_black"
            app:strokeWidth="1dp" />
    </LinearLayout>

</FrameLayout>