<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_new_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.NewProfileFragment">

    <LinearLayout
        android:id="@+id/welcome_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_new_users"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_new_user"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="ExtraText" />

        <Button
            android:id="@+id/btn_create_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/create_profile"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/entrant_teal" />
    </LinearLayout>

</FrameLayout>