<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavAdmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Search Bar -->
        <LinearLayout
            android:id="@+id/bar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/search_events"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_for_events"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:background="@android:drawable/edit_text"
                android:layout_marginEnd="8dp"
                tools:ignore="Autofill"/>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_caps"
                style="@style/LotteryButton.Admin"/>
        </LinearLayout>

        <!-- Title & Filter button Bar -->
        <LinearLayout
            android:id="@+id/bar_title_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_latest_events_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/latest_events"
                style="@style/ScreenTitle.Admin" />

            <Button
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="64dp"
                android:text="@string/filter"
                style="@style/LotteryButton.Neutral"/>
        </LinearLayout>

        <!-- Event List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_events_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_latest_events_title"
            app:layout_constraintBottom_toTopOf="@id/bottomNavAdmin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:elevation="8dp"
        app:menu="@menu/menu_admin_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="BottomNavigationViewLargeScreen"/>

</androidx.constraintlayout.widget.ConstraintLayout>
