<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:id="@+id/rowSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rowTitleSort">

        <EditText
            android:id="@+id/etSearchAdminImages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_for_image"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:background="@android:drawable/edit_text"
            android:layout_marginEnd="8dp"
            tools:ignore="Autofill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearchAdminImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_caps"
            style="@style/LotteryButton.Admin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowTitleSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintTop_toBottomOf="@id/rowSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvSectionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/latest_images"
            style="@style/ScreenTitle.Admin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSortAdminImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="64dp"
            android:text="@string/sort"
            style="@style/LotteryButton.Neutral"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_images_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="36dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/rowTitleSort"
        app:layout_constraintBottom_toTopOf="@id/bottomNavAdmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressAdminImages"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:elevation="8dp"
        app:menu="@menu/menu_admin_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="BottomNavigationViewLargeScreen" />
</androidx.constraintlayout.widget.ConstraintLayout>
